@@ -88,6 +88,13 @@ $sendmail_accessdb_file = '/etc/mail/access.db';
 # Where the pid file should be stored for relaydelay
 $relaydelay_pid_file = '/var/run/relaydelay.pid';
 
+# Set this if you want to check mail that would be handled by ALL 
+#   sendmail's defined mailers, rather than just the smtp and esmtp mailers.
+# If you have custom mailers defined that handle smtp traffic, you will
+#   probably want to enable this.  If you have special non-smtp mailers
+# you may want to disable this.  Default is disabled.
+$force_all_mailer_checks = 0;
+
 # Set this to something nonzero to limit the number of children that the 
 #   milter will spawn.  Since children are never recycled (there seems 
 #   to be a problem doing that with Sendmail::Milter), threads,
