@@ -3,6 +3,9 @@ Changelog for relaydelay.pl and associated files:
 
 UNRELEASED -
 
+  2005-05-28 - Added a config option to force checking for all of sendmail's 
+    mailers rather than just ones that look smtp-like.
+
   2004-05-28 - Added a config option to check for stale db handles.
 
   2004-05-22 - Included two little utilities to do simple queries on the db
